Account for JVM options where multiple instances are a normal use case.